Fixing cursor invisible on Chromium

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -46,7 +46,7 @@
       min-width: 100%;
       max-width: 50vh;
       height: 100%;
-      padding: 0;
+      padding: 1px;
       margin: 0;
       border: 0;
     }
